--- a/app/views/static_pages/who_I_am.html.erb
+++ b/app/views/static_pages/who_I_am.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#who_I_am</h1>
-<p>Find me in app/views/static_pages/who_I_am.html.erb</p>
+
+<h2>Who I Am</h2>
+
+<p>I am Rachel Carton (Rae for short).
+ I am a follower of Christ and definitely open minded.
+ I've been taking photographs since 2013 in my high school year book class and fell in love with the camera and how it works.
+ I am 20 years young, I live in beautiful Los Angeles, California, I am working on several projects at a time usually.
+ I have experience as a photographers assistant before venturing on my own, so I have experience with brides/wedding parties/teens/babies/pets.</p>
