--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -5,14 +5,17 @@ h1 {
   text-align: center;
   color: #800080;
   font-size: 70px;
+  text-shadow: 2px 2px #ff0000;
 }
 h2 {
   text-align: center;
   color: #800080;
   font-size: 30px;
+  text-shadow: 2px 2px #ff0000;
 }
 a {
   font-size: 25px;
+  text-shadow: 2px 2px #ff0000;
 }
 
 h3 {
@@ -21,12 +24,13 @@ h3 {
   border-style: double;
   border-width: 5px;
   border-color: #6600CC;
+  text-shadow: 2px 2px #ff0000;
 }
 
 li {
   font-size: 25px;
   color: #040404;
-
+  text-shadow: 2px 2px #ff0000;
   border-width: 50px;
   border-color: #6600CC;
 }
