--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,150 +1,9 @@
-<!DOCTYPE html>
-<html>
-<%= stylesheet_link_tag "homes.scss" %>
-<head>
-  <h1>Rae's Photography</h1>
-
-</head>
-<body>
-<div id="topNav" data-content-field="navigation">
-<nav class="main-nav"><ul>
-
-
-      <li class="index-collection active-link">
-
-            <a href="/">home</a>
-   </li>
-
-
-
-      <li class="blog-collection">
-
-
-
-
-            <a href="//">blog</a>
-
-
-
-
-
-
-
-      </li>
-
-
-
-      <li class="page-collection">
-
-
-
-
-            <a href="/about/">who i am</a>
-
-
-
-
-
-
-
-      </li>
-
-
-
-      <li class="folder-collection">
-
-
-
-          <a>galleries (Unavailable)</a>
-          <div class="subnav">
-            <ul>
-
-
-                  <li class="gallery-collection">
-                    <a ="/portrait/">portrait</a>
-                  </li>
-
-
-
-
-                  <li class="gallery-collection">
-                    <a ="/senior/">senior</a>
-                  </li>
-
-
-
-
-                  <li class="gallery-collection">
-                    <a ="/wedding/">wedding</a>
-                  </li>
-
-
-
-
-                  <li class="gallery-collection">
-                    <a ="/engagement/">engagement</a>
-                  </li>
-
-
-
-            </ul>
-          </div>
-
-
-
-      </li>
-
-
-
-      <li class="page-collection">
-
-          <%= link_to "contact", static_pages_contact_path %>
-
-
-
-
-
-
-
-      </li>
-
-
-
-      <li class="products-collection">
-
-
-
-
-            <%= link_to "portraits(Not Available)",static_pages_portraits_path %>
-
-
-
-
-
-
-
-      </li>
-
-
-
-      <li class="">
-
-
-
-
-
-
-            <a href="https://www.facebook.com/previewgallery21/" target="_blank">facebook</a>
-
-
-
-
-
-      </li>
-
-
+<h3>Galleries</h3>
+<ul class="galleries">
+  <% @galleries.each do |g| %>
+    <li class="gallery">
+      <%= link_to g.name, gallery_path(g) %>
+    </li>
+  <% end %>
 </ul>
-</nav>
-</div>
-</body>
-</html>
+
