styling fixing and working on edit feature

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,12 +19,12 @@ a {
 }
 
 h3 {
-  font-size: 30px;
-  color: #283A90;
+  font-size: 35px;
+  color: #000000;
   border-style: double;
   border-width: 5px;
   border-color: #6600CC;
-  text-shadow: 2px 2px #ff0000;
+  text-shadow: 1px 1px #ff0000;
 }
 
 li {
@@ -34,3 +34,4 @@ li {
   border-width: 50px;
   border-color: #6600CC;
 }
+
