--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,11 +34,12 @@ h1 {font-family: 'Pinyon Script', cursive, bold;
 }
 
 .add-photo {
-  border: 2px solid red;
+  border: double 2px red;
   padding: 5px;
 }
 
 .photo {
+  margin: 10px;
   float: left;
   text-align: center;
 }
@@ -47,4 +48,10 @@ h1 {font-family: 'Pinyon Script', cursive, bold;
   display: block;
   clear: both;
   text-align: right;
+}
+
+a {
+    color: black;
+    background-color: #A9A9A9;
+    padding: 5px;
 }
