--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -8,10 +8,13 @@
     <%= f.submit "Add Photo" %>
   <% end %>
 </div>
-<hr>
 <% @photos.each do |photo| %>
   <div class="photo">
     <%= image_tag(photo.url, width: "300") %>
     <h3><%= photo.description %></h3>
+    <%= link_to "Edit", edit_photo_path(photo) %>
+    &nbsp;&nbsp;|&nbsp;&nbsp;
+    <%= link_to "Delete", photo_path(photo), method: :delete %>
+
   </div>
 <% end %>
