--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           <a href="/">home</a>
     </li>
     <li class="blog-collection">
-          <a href="//">blog</a>
+          <a href="//">blog(Unavailable)</a>
     </li>
     <li class="page-collection">
           <%= link_to "Who I Am",static_pages_who_I_am_path %>
@@ -77,6 +77,6 @@
 </nav>
 </div>
 <%= yield %>
-<a class="watermark">Rae's Photography</a>
+<h4 class="watermark">Rae's Photography</h4>
 </body>
 </html>
