--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -7,9 +7,9 @@
 <li>
   <h3>Name</h3> Rachel D. Carton
 </li>
-<li><h3>Email</h3>raesphotography2015@gmail.com</li>
+<li><h3>Email</h3>&nbsp;&nbsp;raesphotography2015@gmail.com</li>
 
 <li><h3>Cell</h3>(424) 772-9971</li>
-<li class=""><a href="https://www.facebook.com/previewgallery21/" target="_blank">Facebook</a></li>
+<li class="facebook"><a href="https://www.facebook.com/previewgallery21/" target="_blank">Facebook</a></li>
 <li><h3>Tumblr</h3>http://raesphotography2015.tumblr.com/</li>
 
