--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,10 +48,16 @@ h1 {font-family: 'Pinyon Script', cursive, bold;
   display: block;
   clear: both;
   text-align: right;
-}
+  padding: 10px;
+  color: black;
+  text-shadow: 2px 2px #ff0000;
+  background-color: #A9A9A9;
+  background-size: 5px auto;
+  background-position: inherit;
+  }
 
 a {
     color: black;
     background-color: #A9A9A9;
-    padding: 5px;
+    padding: 2px;
 }
