--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -5,7 +5,7 @@
 
 
 <li>
-  <h3>Name</h3> Rachel D. Carton
+  <h3>Name</h3> &nbsp;&nbsp;Rachel D. Carton
 </li>
 <li><h3>Email</h3>&nbsp;&nbsp;raesphotography2015@gmail.com</li>
 
