added prices page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 
       <li class="page-collection">
 
-          <%= link_to "contact", static_pages_contact_path %>
+          <%= link_to "Contact Me", static_pages_contact_path %>
 
 
 
