--- a/app/views/static_pages/information.html.erb
+++ b/app/views/static_pages/information.html.erb
@@ -1,7 +1,12 @@
 <h1>Pricing Rates</h1>
-<h2>This page is to show the approximate Prices. Prices will vary per shoot, but these are the baseline.
+<h2>This page is to show the Prices. Prices are subject to change according to the photoshoot, but these are the baseline for the prices.
 </h2>
 
 
-
-<li><h3>Photoshoots</h3><p>Small/1 hour Shoot</p></li>
+<li><h3>CD's</h3><p>1 CD with all photos, including a folder showing the best in the eyes of the Photographer</p><p>10</p></li>
+<li><h3>Prints</h3><p>A set of printed photos</p><p>35</p></li>
+<li><h3>Small / 1 hour Photoshoot</h3><p>~100</p></li>
+<li><h3>Medium / 2 hour Photoshoot</h3><p>~200</p></li>
+<li><h3>Large / 3 hour+ Photoshoot</h3><p>~300 +</p></li>
+<li><h3>Wedding Photoshoot</h3><p>~500 +</p></li>
+<li><h3>Special Event Photoshoot</h3><p>~300</p></li>
