--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           <a href="/">home</a>
     </li>
     <li class="blog-collection">
-          <%= link_to "Information(Currently Unavailable)",static_pages_information_path %>
+          <%= link_to "Pricing Information",static_pages_information_path %>
     </li>
     <li class="page-collection">
           <%= link_to "Who I Am",static_pages_who_I_am_path %>
