--- a/app/views/static_pages/information.html.erb
+++ b/app/views/static_pages/information.html.erb
@@ -3,10 +3,10 @@
 </h2>
 
 
-<li><h3>CD's</h3><p>1 CD with all photos, including a folder showing the best in the eyes of the Photographer</p><p>10</p></li>
-<li><h3>Prints</h3><p>A set of printed photos</p><p>35</p></li>
-<li><h3>Small / 1 hour Photoshoot</h3><p>~100</p></li>
-<li><h3>Medium / 2 hour Photoshoot</h3><p>~200</p></li>
-<li><h3>Large / 3 hour+ Photoshoot</h3><p>~300 +</p></li>
-<li><h3>Wedding Photoshoot</h3><p>~500 +</p></li>
-<li><h3>Special Event Photoshoot</h3><p>~300</p></li>
+<li><h3>CD's</h3><p>&nbsp;&nbsp;1 CD with all photos, including a folder showing the best in the &nbsp;&nbsp;eyes of the Photographer</p><p>$10</p></li>
+<li><h3>Prints</h3><p>&nbsp;&nbsp;A set of printed photos</p><p>&nbsp;&nbsp;$35</p></li>
+<li><h3>Small / 1 hour Photoshoot</h3><p>&nbsp;&nbsp;~$100</p></li>
+<li><h3>Medium / 2 hour Photoshoot</h3><p>&nbsp;&nbsp;~$200</p></li>
+<li><h3>Large / 3 hour+ Photoshoot</h3><p>&nbsp;&nbsp;~$300 +</p></li>
+<li><h3>Wedding Photoshoot</h3><p>&nbsp;&nbsp;~$500 +</p></li>
+<li><h3>Special Event Photoshoot</h3><p>&nbsp;&nbsp;~$300</p></li>
