--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -25,6 +25,7 @@ h3 {
   border-width: 5px;
   border-color: #6600CC;
   text-shadow: 1px 1px #ff0000;
+  text-align: center;
 }
 
 li {
@@ -35,6 +36,7 @@ li {
   border-color: #6600CC;
   padding-bottom: 20px;
   background-color: rgba(204,204,204,0.3);
+
 
 }
 .facebook{
