removed sign up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link href='https://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <p>
@@ -54,7 +55,7 @@
 
 
 
-            <%= link_to "portraits(Not Available)",static_pages_portraits_path %>
+            <%= link_to "portraits( Not Available)",static_pages_portraits_path %>
 
 
       </li>
