--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -5,11 +5,11 @@
 
 
 <li>
-  <h3>Name</h3> &nbsp;&nbsp;Rachel D. Carton
+  <h3>Name</h3> &nbsp;&nbsp;<p class="info">Rachel D. Carton</p>
 </li>
-<li><h3>Email</h3>&nbsp;&nbsp;raesphotography2015@gmail.com</li>
+<li><h3>Email</h3>&nbsp;&nbsp;<p class="info">raesphotography2015@gmail.com</p></li>
 
-<li><h3>Cell</h3>(424) 772-9971</li>
+<li><h3>Cell</h3><p class="info">(424) 772-9971</p></li>
 <li class="facebook"><a href="https://www.facebook.com/previewgallery21/" target="_blank">Facebook</a></li>
-<li><h3>Tumblr</h3>http://raesphotography2015.tumblr.com/</li>
+<li><h3>Tumblr</h3><p class="info">http://raesphotography2015.tumblr.com/</p></li>
 
