--- a/app/views/static_pages/portraits.html.erb
+++ b/app/views/static_pages/portraits.html.erb
@@ -1,2 +1,2 @@
 <h1>StaticPages#portraits</h1>
-<p>Find me in app/views/static_pages/portraits.html.erb</p>
+<p>Unavailable at the moment, please check back at a later time.</p>
