--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,21 +19,29 @@ body {
   /*background-color: #AA7800*/
 ;
 }
-li {font-family: 'Pinyon Script', cursive;
+li {
+    font-family: 'Pinyon Script', cursive;
     float: center;
 
 }
 
 h1 {
-  font-family: 'Pinyon Script', cursive, bold;
+  font-family: 'Pinyon Script', cursive;
   position: relative;
   color: #000;
-  text-shadow: 2px 2px #ff0000;
+  /*text-shadow: 2px 2px #ff0000;*/
 
 }
 
 .main-nav li {
   display: inline-block;
+  border-style: double;
+  border-width: 5px;
+  border-color: #6600CC;
+  margin-top: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
 }
 
 .add-photo {
@@ -49,6 +57,7 @@ h1 {
 
 .watermark {
   font-family: 'Pinyon Script', cursive, bold;
+  font-size: 25px;
   display: block;
   clear: both;
   text-align: right;
@@ -63,10 +72,15 @@ h1 {
 
 a {
     color: black;
-    background-color: #A9A9A9;
+    /*background-color: #A9A9A9;*/
     padding: 2px;
 }
 p {
-  background-color: #A9A9A9;
+  /*background-color: #A9A9A9;*/
+}
+.info {
+  font-family: 'Roboto', sans-serif;
+}
+.who {
   background-color: rgba(204,204,204,0.4);
 }
