--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -15,7 +15,7 @@ h2 {
 }
 a {
   font-size: 25px;
-  text-shadow: 2px 2px #ff0000;
+  text-shadow: 1px 1px #ff0000;
 }
 
 h3 {
@@ -35,7 +35,7 @@ li {
   border-width: 50px;
   border-color: #6600CC;
   padding-bottom: 20px;
-  background-color: rgba(204,204,204,0.3);
+  // background-color: rgba(204,204,204,0.3);
 
 
 }
@@ -46,6 +46,6 @@ li {
   margin-top: 10px;
   padding-top: 9px;
   padding-bottom: 9px;
-
+  text-shadow: 1px 1px #ff0000;
 }
 
