--- a/app/views/static_pages/who_I_am.html.erb
+++ b/app/views/static_pages/who_I_am.html.erb
@@ -1,8 +1,8 @@
 
 <h2>Who I Am</h2>
 
-<p>I am Rachel D. Carton (My friends call me Rae).
+<p class="who">I am Rachel D. Carton (My friends call me Rae).
  I am a follower of Christ and definitely open minded.</p>
-<p>I've been taking photographs since 2013 in my high school year-book class and fell deeply in love with all types of cameras and how they work.
+<p class="who">I've been taking photographs since 2013 in my high school year-book class and fell deeply in love with all types of cameras and how they work.
  I am 20 years young, living in Torrance, Southern Los Angeles County, California, I am working on several projects at a time usually.
  I have experience being a photographers assistant before venturing on my own, this allowed me to gain experience working with brides/wedding parties/teens/babies/pets.</p>
